[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ms3"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "description",
    "entry-points",
    "gui-scripts",
    "license",
    "optional-dependencies",
    "readme",
    "requires-python",
    "scripts",
    "urls",
    "version"
]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
